syntax = "proto3";

package inventory.v1;

import "google/protobuf/empty.proto";

option go_package = "github.com/yourusername/inventory-service/api/inventory/v1;v1";

service InventoryService {
  rpc GetInventory(GetInventoryRequest) returns (Inventory);
  rpc UpdateInventory(UpdateInventoryRequest) returns (Inventory);
  rpc ListInventories(google.protobuf.Empty) returns (ListInventoriesResponse);
}

message GetInventoryRequest {
  string sku = 1;
  int64 warehouse_id = 2;
  string channel = 3;
}

message UpdateInventoryRequest {
  string sku = 1;
  int64 warehouse_id = 2;
  string channel = 3;
  int32 quantity = 4;
}

message Inventory {
  string sku = 1;
  int64 warehouse_id = 2;
  string channel = 3;
  int32 quantity = 4;
}

message ListInventoriesResponse {
  repeated Inventory inventories = 1;
}
